--- a/Project/src/templates/base.html
+++ b/Project/src/templates/base.html
@@ -59,7 +59,7 @@
 
     <footer>
         <div class="footer">
-            <p>All rights reserved by Kai Pistol</p>
+            <p>All rights reserved by Elektrizitätswerke Entenhausen</p>
         </div>
     </footer>
 </body>
