Update Custom User Model

--- a/Project/src/templates/index.html
+++ b/Project/src/templates/index.html
@@ -60,7 +60,7 @@ Welcome!
                 <a href="/login/">Login</a>
             </div>
             <div class="nav-item">
-                <a href="/register/">Registration</a>
+                <a href="/signup/">Registration</a>
             </div>
         </div>
     </header>
