--- a/Project/src/templates/Login.html
+++ b/Project/src/templates/Login.html
@@ -53,7 +53,7 @@ Login
                 <a href="/login/">Login</a>
             </div>
             <div class="nav-item">
-                <a href="/register/">Registration</a>
+                <a href="/signup/">Registration</a>
             </div>
         </div>
     </header>
