--- a/Project/src/templates/Pricing.html
+++ b/Project/src/templates/Pricing.html
@@ -47,7 +47,7 @@ Pricing
                 <a href="/login/">Login</a>
             </div>
             <div class="nav-item">
-                <a href="/register/">Registration</a>
+                <a href="/signup/">Registration</a>
             </div>
         </div>
     </header>
