--- a/Project/src/templates/contract_form.html
+++ b/Project/src/templates/contract_form.html
@@ -77,7 +77,7 @@
                     <a href="/login/">Login</a>
                 </div>
                 <div class="nav-item">
-                    <a href="/register/">Registration</a>
+                    <a href="/signup/">Registration</a>
                 </div>
             </div>
         </header>
