--- a/Project/src/templates/premium_plan.html
+++ b/Project/src/templates/premium_plan.html
@@ -36,7 +36,7 @@ Premium Plan
                 <a href="/login/">Login</a>
             </div>
             <div class="nav-item">
-                <a href="/register/">Registration</a>
+                <a href="/signup/">Registration</a>
             </div>
         </div>
     </header>
