--- a/Project/src/templates/signup.html
+++ b/Project/src/templates/signup.html
@@ -45,7 +45,7 @@ Register
                 <a href="/login/">Login</a>
             </div>
             <div class="nav-item">
-                <a href="/register/">Registration</a>
+                <a href="/signup/">Registration</a>
             </div>
         </div>
     </header>
