Change User Data V0.1 Overview + Base Module Change Tariff (not done yet)

--- a/Project/src/templates/contract_form.html
+++ b/Project/src/templates/contract_form.html
@@ -1,8 +1,8 @@
+{% extends "base.html" %}
 
     {% block title %}Customer Information Form{% endblock %}
 
     {% block custom_css %}
-        /* Add some styling for better visual separation */
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
