--- a/Project/src/templates/Login.html
+++ b/Project/src/templates/Login.html
@@ -60,14 +60,15 @@ Login
 {% endblock %}
 
 {% block body %}
-    <form>
-        <label for="email">Email Address:</label>
-        <input type="email" id="email" name="email" required>
+<form method="post">
+    {% csrf_token %}
+    <label for="username">Benutzername:</label>
+    <input type="text" id="username" name="username" required><br>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
+    <label for="password">Passwort:</label>
+    <input type="password" id="password" name="password" required><br>
 
-        <input type="submit" value="Login">
-    </form>
+    <button type="submit">Anmelden</button>
+</form>
 {% endblock %}
 
