Updated Contract Form & Pricing sites

--- a/Project/src/templates/green_plan.html
+++ b/Project/src/templates/green_plan.html
@@ -49,7 +49,7 @@ Green Plan
         <p>Our Green Plan is designed for those who want to make a significant impact on the environment by using 100% renewable energy. Here are the key terms and features of the Green Plan:</p>
 
         <ul>
-            <li><strong>Monthly Cost:</strong> €100</li>
+            <li><strong>Consumption Price:</strong> 28 Cent/kWh</li>
             <li><strong>Renewable Energy:</strong> 100%</li>
             <li><strong>Contract Duration:</strong> 12 months</li>
             <li><strong>Early Termination Fee:</strong> €50</li>
@@ -64,6 +64,7 @@ Green Plan
         function choosePlan(plan) {
             // Placeholder function, customize as needed
             alert(plan + ' Plan chosen!'); // You can replace this with your desired action
+            window.location.replace("http://127.0.0.1:8000/contract_form_green/");
         }
     </script>
 {% endblock %}
