--- a/Project/src/templates/standard_plan.html
+++ b/Project/src/templates/standard_plan.html
@@ -48,7 +48,7 @@ Standard Plan
         <p>Our Standard Plan offers a reliable and cost-effective solution for your electricity needs. Below are the key terms and features of the Standard Plan:</p>
 
         <ul>
-            <li><strong>Monthly Cost:</strong> €50</li>
+            <li><strong>Consumption Price:</strong> 30 Cent/kWh</li>
             <li><strong>Renewable Energy:</strong> 30%</li>
             <li><strong>Contract Duration:</strong> 12 months</li>
             <li><strong>Early Termination Fee:</strong> €50</li>
@@ -64,6 +64,7 @@ Standard Plan
         function choosePlan() {
             // Placeholder function, customize as needed
             alert('Plan chosen!'); // You can replace this with your desired action
+            window.location.replace("http://127.0.0.1:8000/contract_form_standard/");
         }
     </script>
 {% endblock %}
