--- a/Project/src/templates/Pricing.html
+++ b/Project/src/templates/Pricing.html
@@ -57,19 +57,19 @@ Pricing
     <div class="pricing-cards">
         <div class="card" onclick="navigateTo('/pricing/standard_plan')">
             <h2>Standard Plan</h2>
-            <p>Monthly Cost: €50</p>
+            <p>Consumption Price: 30 Cent/kWh</p>
             <p>Renewable Energy: 30%</p>
         </div>
 
         <div class="card" onclick="navigateTo('/pricing/premium_plan')">
             <h2>Premium Plan</h2>
-            <p>Monthly Cost: €75</p>
+            <p>Consumption Price: 31 Cent/kWh</p>
             <p>Renewable Energy: 50%</p>
         </div>
 
         <div class="card" onclick="navigateTo('/pricing/green_plan')">
             <h2>Green Plan</h2>
-            <p>Monthly Cost: €100</p>
+            <p>Consumption Price: 28 Cent/kWh</p>
             <p>Renewable Energy: 100%</p>
         </div>
     </div>
