Update Keine Lust mehr / User dashboard anpassung

--- a/Project/src/templates/Login.html
+++ b/Project/src/templates/Login.html
@@ -62,7 +62,7 @@ Login
 {% block body %}
 <form method="post">
     {% csrf_token %}
-    <label for="username">Benutzername:</label>
+    <label for="username">E-Mail Adresse:</label>
     <input type="text" id="username" name="username" required><br>
 
     <label for="password">Passwort:</label>
