--- a/Project/src/templates/user_dashboard.html
+++ b/Project/src/templates/user_dashboard.html
@@ -51,7 +51,7 @@
     </aside>
 
     <div>
-        <h1>Welcome {{ first_name }} {{ last_name }}</h1>
+        <h1>Welcome {{ firstname }} {{ lastname }}</h1>
 
         <table>
             <thead>
