--- a/Project/src/templates/Login.html
+++ b/Project/src/templates/Login.html
@@ -68,7 +68,7 @@ body {
 {% block body %}
 <form method="post">
     {% csrf_token %}
-    <label for="username">Benutzername:</label>
+    <label for="username">E-Mail Adresse:</label>
     <input type="text" id="username" name="username" required><br>
 
                 <label for="password">Passwort:</label>
