--- a/Project/electricity-provider/templates/contract_form_standard.html
+++ b/Project/electricity-provider/templates/contract_form_standard.html
@@ -67,11 +67,11 @@
         <form method="post">
             {% csrf_token %}
 
-            <label for="first_name">First Name:</label>
-            <p>{{ user.firstname }}</p>  <br>
+            <label for="first_name">First Name:   <span>{{ user.firstname }}</span></label>
+            <br>
 
-            <label for="last_name">Last Name:</label>
-            <p>{{ user.lastname }}</p>  <br><br>
+            <label for="last_name">Last Name:   <span>{{ user.lastname }}</span></label>
+            <br>
 
             <!-- Display pricing information from Django model -->
             <label for="pricing">Chosen Pricing:</label>
