--- a/Project/electricity-provider/templates/base.html
+++ b/Project/electricity-provider/templates/base.html
@@ -54,6 +54,46 @@
     </style>
 </head>
 <body>
+{% if user.is_authenticated %}
+        <header>
+            <div class="header-left">
+                <a href="/">
+                <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo">
+                </a>
+            </div>
+            <div class="header-right">
+                <div class="nav-item">
+                    <a href="/dashboard/">Dashboard</a>
+                </div>
+                <div class="nav-item">
+                    <a href="/pricing/">Pricing</a>
+                </div>
+                <div class="nav-item">
+                    <a href="/logout/">Logout</a>
+                </div>
+            </div>
+        </header>
+{% else %}
+            <header>
+            <div class="header-left">
+                <a href="/">
+                <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo">
+                </a>
+            </div>
+            <div class="header-right">
+                <div class="nav-item">
+                    <a href="/pricing/">Prices</a>
+                </div>
+                <div class="nav-item">
+                    <a href="/login/">Login</a>
+                </div>
+                <div class="nav-item">
+                    <a href="/signup/">Registration</a>
+                </div>
+            </div>
+        </header>
+{% endif %}
+
 {% block header_not_logged_in %} {% endblock %}
  {% block body %}   {% endblock %}
 </body>
