--- a/Project/electricity-provider/templates/base.html
+++ b/Project/electricity-provider/templates/base.html
@@ -69,7 +69,7 @@
                     <a href="/pricing/">Pricing</a>
                 </div>
                 <div class="nav-item">
-                    <a href="{% url 'logout' %}">Logout</a>
+                    <a href="/logout/">Logout</a>
                 </div>
             </div>
         </header>
