--- a/Project/electricity-provider/templates/user_dashboard.html
+++ b/Project/electricity-provider/templates/user_dashboard.html
@@ -44,9 +44,10 @@
     <aside>
         <h3>Navigation</h3>
         <ul>
-            <li><a href="{% url 'user_dashboard' %}">User Dashboard</a></li>
-            <li><a href="{% url 'change_information' %}">Change Information</a></li>
-            <li><a href="{% url 'billing_history' %}">Billing History</a></li>
+
+            <li><a href="/user_dashboard/">User Dashboard</a></li>
+            <li><a href="/change_information/">Change Information</a></li>
+            <li><a href="/billing_history/">Billing History</a></li>
         </ul>
     </aside>
 
