--- a/Project/electricity-provider/templates/signup.html
+++ b/Project/electricity-provider/templates/signup.html
@@ -1,27 +1,36 @@
 {%  extends "base.html" %}
 
 {% block custom_css %}
-        form {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
-        input {
-            width: 50%;
-            box-sizing: border-box;
-            padding: 8px;
-            margin-bottom: 16px;
-        }
-        input[type="submit"] {
-            background-color: #4caf50;
-            color: white;
-            cursor: pointer;
-        }
+body {
+    font-family: Arial, sans-serif;
+}
+form {
+    width: 50%;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+}
+input {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 8px;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+input[type="submit"] {
+    background-color: #4caf50;
+    color: white;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+}
+input[type="submit"]:hover {
+    background-color: #45a049;
+}
 {% endblock %}
 
 {% block titel %}
