--- a/Project/electricity-provider/templates/billing.html
+++ b/Project/electricity-provider/templates/billing.html
@@ -1,6 +1,8 @@
+{% block title %}Billing Overview{% endblock %}
+
 {% block body %}
 
-<h1>Contract List</h1>
+<h1>Billing Overview</h1>
 <table border="1">
     <tr>
         <th>Contract Number</th>
