--- a/Project/electricity-provider/templates/index.html
+++ b/Project/electricity-provider/templates/index.html
@@ -48,7 +48,7 @@ Welcome!
 
 {% block body %}
 
-        <h2 style="text-align:center;padding:30px 0;"><b>What we stand for</b></h2>
+        <h2 style="text-align:center;padding:30px 0;"><b>What EcoPower Solutions™ stands for</b></h2>
 
        <div class="clearfix">
           <div class="card">
