--- a/Project/electricity-provider-api/templates/ui_register_page.html
+++ b/Project/electricity-provider-api/templates/ui_register_page.html
@@ -1,4 +1,4 @@
-<form id="registerForm" method="POST" action="http://localhost:8000/register/">
+<form id="registerForm" method="POST" action="http://localhost:8000/api/v1/register/">
     {% csrf_token %}
     <label for="first_name">Vorname:</label><br>
     <input type="text" id="first_name" name="first_name"><br>
