--- a/Project/electricity-provider-api/templates/ui_register_page.html
+++ b/Project/electricity-provider-api/templates/ui_register_page.html
@@ -1,3 +1,120 @@
+
+{%  extends "base.html" %}
+
+{% block custom_css %}
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        label {
+            display: block;
+            margin-bottom: 8px;
+        }
+        input {
+            width: 50%;
+            box-sizing: border-box;
+            padding: 8px;
+            margin-bottom: 16px;
+        }
+        input[type="submit"] {
+            background-color: #4caf50;
+            color: white;
+            cursor: pointer;
+        }
+{% endblock %}
+
+{% block titel %}
+Register
+{% endblock %}
+
+
+
+{% block header_not_logged_in %}
+    <header>
+        <div class="header-left">
+            <a href="/">
+            <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo">
+            </a>
+        </div>
+        <div class="header-right">
+            <div class="nav-item">
+                <a href="/pricing/">Prices</a>
+            </div>
+            <div class="nav-item">
+                <a href="/login/">Login</a>
+            </div>
+            <div class="nav-item">
+                <a href="/register/">Registration</a>
+            </div>
+        </div>
+    </header>
+{% endblock %}
+
+{% block body %}
+<form id="registerForm" method="POST" action="http://localhost:8000/api/v1/register/">
+    {% csrf_token %}
+    <label for="first_name">Vorname:</label><br>
+    <input type="text" id="first_name" name="first_name"><br>
+    <label for="last_name">Nachname:</label><br>
+    <input type="text" id="last_name" name="last_name"><br>
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email"><br>
+    <label for="password">Passwort:</label><br>
+    <input type="password" id="password" name="password"><br>
+    <input type="submit" value="Submit">
+</form>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#registerForm').on('submit', function(event){
+            event.preventDefault();
+            $.ajax({
+                type: 'POST',
+                url: $(this).attr('action'),
+                data: JSON.stringify({
+                    first_name: $('#first_name').val(),
+                    last_name: $('#last_name').val(),
+                    email: $('#email').val(),
+                    password: $('#password').val()
+                }),
+                contentType: 'application/json',
+                dataType: 'json'
+            });
+        });
+    });
+</script>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <form id="registerForm" method="POST" action="http://localhost:8000/api/v1/register/">
     {% csrf_token %}
     <label for="first_name">Vorname:</label><br>
