--- a/Project/electricity-provider-api/templates/ui_main_page.html
+++ b/Project/electricity-provider-api/templates/ui_main_page.html
@@ -54,7 +54,7 @@ Welcome!
         </div>
         <div class="header-right">
             <div class="nav-item">
-                <a href="/pricing/">Prices</a>
+                <a href="/">Home</a>
             </div>
             <div class="nav-item">
                 <a href="/login/">Login</a>
