--- a/Project/electricity-provider-api/templates/base.html
+++ b/Project/electricity-provider-api/templates/base.html
@@ -26,18 +26,33 @@
             height: 50px;
         }
 
+        .header-left {
+            display: flex;
+            align-items: center;
+        }
+        
+        .logo {
+            width: 50px;
+            height: 50px;
+        }
+        
         .header-right {
             display: flex;
             align-items: center;
         }
-
+        
         .nav-item {
-            margin-left: 10px;
+            margin-right: 10px;
         }
-
+        
         .nav-item a {
             text-decoration: none;
             color: #333;
+            font-weight: bold;
+        }
+        
+        .nav-item a:hover {
+            color: #4caf50;
         }
 
         footer {
