--- a/Project/electricity-provider-api/templates/ui_main_page.html
+++ b/Project/electricity-provider-api/templates/ui_main_page.html
@@ -66,7 +66,26 @@ Welcome!
     </header>
 {% endblock %}
 
-
+{% block header_logged_in %}
+    <header>
+        <div class="header-left">
+            <a href="/">
+            <img src="https://www.pngall.com/wp-content/uploads/2016/07/Sun-PNG-Clipart.png" alt="Logo" class="logo">
+            </a>
+        </div>
+        <div class="header-right">
+            <div class="nav-item">
+                <a href="/">Home</a>
+            </div>
+            <div class="nav-item">
+                <a href="/customer/">My Dashboard</a>
+            </div>
+            <div class="nav-item">
+                <a href="/logout/">Logout</a>
+            </div>
+        </div>
+    </header>
+{% endblock %}
 
 {% block body %}
 
