--- a/Project/electricity-provider-api/templates/ui_main_page.html
+++ b/Project/electricity-provider-api/templates/ui_main_page.html
@@ -57,6 +57,9 @@ Welcome!
                 <a href="/">Home</a>
             </div>
             <div class="nav-item">
+              <a href="/pricing/">Pricing</a>
+          </div>
+            <div class="nav-item">
                 <a href="/login/">Login</a>
             </div>
             <div class="nav-item">
@@ -77,6 +80,9 @@ Welcome!
             <div class="nav-item">
                 <a href="/">Home</a>
             </div>
+            <div class="nav-item">
+              <a href="/pricing/">Pricing</a>
+          </div>
             <div class="nav-item">
                 <a href="/customer/">My Dashboard</a>
             </div>
