--- a/Project/electricity-provider-api/templates/ui_pricing_page.html
+++ b/Project/electricity-provider-api/templates/ui_pricing_page.html
@@ -135,7 +135,7 @@ input[type="submit"]:hover {
                 <a href="/register/">Contract</a>
             </div>
             <div class="nav-item">
-                <a href="/register/">My Dashboard</a>
+                <a href="/customer/">My Dashboard</a>
             </div>
             <div class="nav-item">
                 <a href="/logout/">Logout</a>
